<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.5">
  <DUT Name="DruckSensor" Id="{d82aab08-7697-4aa1-8bf6-f49cf53293ad}">
    <Declaration><![CDATA[TYPE DruckSensor :
STRUCT
	ModbusAdresse:			BYTE;
	bDruckabfrage: 			BOOL  := TRUE;
	bTemperaturabfrage:		BOOL  := FALSE;
	Data: 					ARRAY[0..1] OF DWORD;	(*hier werden die abgefragen Register hineingeschrieben*)
	Startfeld_ModbusData: 	INT ; 
	rDruck: 				REAL; 					(*angegeben in Bar*)
	rTemp:					REAL;					(*angegeben in °C*)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>